# flext-observability

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Makefile.bak  README.md  REFACTORING_BENEFITS.md  base.mk  conftest.py  custom.mk  custom.mk.rej  debug_test.py  history  history.json  index.md  mkdocs.yml  pyproject.toml  requirements.txt  {}
.github/workflows/: ci.yml
.scope/: config.toml
.serena/: project.yml
api/: factory-api.md  simple-api.md
api-reference/: README.md
architecture/: README.md  c4-model.md
config/: observability.yaml
docs/: README.md  SIMPLE_LOGGING_GUIDE.md  TODO.md  implementation_status.md  index.md
docs/api/: factory-api.md  monitoring-api.md  service-api.md  simple-api.md
docs/api-reference/: README.md
docs/architecture/: README.md  c4-model.md
docs/examples/: basic-usage.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  implementation_status.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/maintenance/: README.md  config.yaml
docs/maintenance/audit/: content-audit.py
docs/maintenance/reports/: report_20251017_231855.md
docs/roadmap/: current-status.md
docs/standards/: python-module-organization.md
examples/: 01_functional.py  02_solid_observability_demo.py  README.md  __init__.py  functional_examples.py  simple_logging_example.py  solid_observability_demo.py
guides/: README.md  configuration.md  development.md  getting-started.md  implementation_status.md  skill-automation-pattern.md  testing.md  troubleshooting.md
legado/mro-ktv9/: fields.py
reports/: pytest.xml
scripts/: README.md
src/: README.md
src/flext_observability/: README.md  __init__.py  __init__.pyi  __version__.py  _compatibility.py  _config.py  _core.py  _deprecated.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _settings.py  advanced_context.py  alerting.py  api.py  base.py  business_metrics.py  cli.py  config.py  configuration.py  constants.py  container.py  context.py  core.py  core.py.proxy  custom_metrics.py  database_instrumentation.py  domain.py  entities.py  error_handling.py  error_patterns.py  exceptions.py  exceptions.py.disabled  factories.py  factory.py  fields.py  flext_metrics.py  flext_monitor.py  flext_simple.py  flext_structured.py  (+35 more)
src/flext_observability/_models/: __init__.py  config.py
src/flext_observability/_semantic_new/: __init__.py
src/flext_observability/_utilities/: __init__.py  _custom_metrics.py  _http_client_instrumentation.py  _http_instrumentation.py  _sampling.py  _services.py
src/flext_observability/application/: __init__.py  handlers.py  services.py
src/flext_observability/config/: observability.yaml
src/flext_observability/domain/: __init__.py  entities.py  events.py  metrics.py  ports.py  services.py  specifications.py  types.py  value_objects.py
src/flext_observability/foundation/: __init__.py  abstractions.py  protocols.py  specifications.py
src/flext_observability/infrastructure/: __init__.py  adapters.py  config.py  container.py  di_container.py  logging.py  ports.py  repositories.py  storage.py
src/flext_observability/infrastructure/persistence/: __init__.py  base.py  repositories.py
src/flext_observability/services/: __init__.py  advanced_context.py  context.py  custom_metrics.py  error_handling.py  fields.py  health.py  http_client_instrumentation.py  http_instrumentation.py  logging_integration.py  monitoring.py  performance.py  sampling.py  services.py
src/flx_observability/: BACKUP_NOTE.md  README.md  __init__.py  business_metrics.py  error_patterns.py  grpc_interceptors.py  health.py  health.py.backup  metrics.py  middleware.py  prometheus_metrics.py  rich_error_handler.py  security.py  structured_logging.py  tracing.py
standards/: python-module-organization.md
tests/: README.md  __init__.py  base.py  conftest.py  constants.py  models.py  protocols.py  settings.py  test_api_error_coverage.py  test_application_services.py  test_application_services.py.skip  test_complete_coverage.py  test_complete_integration_real.py  test_coverage.py  test_domain_services.py  test_domain_services.py.skip  test_e2e.py  test_e2e_comprehensive.py  test_entities.py  test_entities_factory_functions.py  test_entities_simple.py  test_entities_validation_errors.py  test_exceptions_simple.py  test_factory.py  test_factory_complete.py  test_factory_missing_coverage.py  test_factory_real_functionality.py  test_fields_coverage.py  test_flext.py  test_flext_monitor.py  test_flext_monitor_complete.py  test_flext_simple.py  test_health.py  test_init.py  test_init_coverage.py  test_metrics.py  test_monitor.py  test_monitor_missing_coverage.py  test_new_api.py  test_services.py  (+15 more)
tests/e2e/: README.md  __init__.py
tests/fixtures/: README.md  __init__.py
tests/integration/: README.md  __init__.py  test_phase_11_integration.py
tests/unit/: README.md  __init__.py  test_alerting.py  test_api_error_coverage.py  test_config.py  test_constants.py  test_coverage.py  test_e2e.py  test_entities.py  test_entities_factory_functions.py  test_entities_validation_errors.py  test_exceptions.py  test_factories.py  test_factory.py  test_fields.py  test_fields_coverage.py  test_flext.py  test_flext_monitor.py  test_health.py  test_init.py  test_logging.py  test_metrics.py  test_models.py  test_monitor.py  test_monitoring.py  test_new_api.py  test_protocols.py  test_services.py  test_services_focused.py  test_simple.py  test_suite.py  test_tracing.py  test_types_coverage.py  test_typings.py
