[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: System :: Monitoring",
        "Typing :: Typed",
    ]
    dependencies = [
        "opentelemetry-api (>=1.39.1,<2.0.0)",
        "opentelemetry-sdk (>=1.39.1,<2.0.0)",
        "opentelemetry-exporter-otlp-proto-grpc (>=1.39.1,<2.0.0)",
        "opentelemetry-exporter-prometheus (>=0.60b1,<0.61)",
        "prometheus-client (>=0.23.0)",
        "psutil>=6.1.0",
        "pydantic-settings>=2.10.1",
        "pydantic (>=2.12.3)",
        "rich (>=14.2.0,<15.0.0)",
        "structlog>=25.4.0",
        "typer>=0.15.0",
        "pydantic-core (>=2.41.4)",
        "pytest (>=9.0.2,<10.0.0)",
        "pytest-cov (>=7.0.0,<8.0.0)",
        "pytest-randomly (>=4.0.1,<5.0.0)",
        "faker (>=40.1.0,<41.0.0)",
    ]
    description = "FLEXT Observability - Enterprise Monitoring, Metrics & Telemetry"
    keywords = [
        "enterprise",
        "flext",
        "logging",
        "metrics",
        "monitoring",
        "tracing",
        "typed",
    ]
    name = "flext-observability"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.optional-dependencies]
        dev = [
            "autoflake>=2.3.1",
            "black>=25.1.0",
            "codespell>=2.3.0",
            "deptry>=0.23.0",
            "isort>=6.0.1",
            "pre-commit>=4.0.1",
            "pylint>=3.3.0",
            "pyupgrade>=3.19.0",
            "radon>=6.0.1",
            "ruff>=0.12.3",
            "vulture>=2.13",
        ]
        security = [
            "bandit>=1.8.0",
            "pip-audit>=2.7.3",
        ]
        test = [
            "factory-boy>=3.3.1",
            "faker>=37.4.0",
            "hypothesis>=6.125.0",
            "pytest-benchmark>=5.1.0",
            "pytest-clarity>=1.0.1",
            "pytest-cov>=6.2.0",
            "pytest-deadfixtures>=2.2.1",
            "pytest-env>=1.1.5",
            "pytest-mock>=3.14.0",
            "pytest-randomly>=3.16.0",
            "pytest-sugar>=1.0.0",
            "pytest-timeout>=2.4.0",
            "pytest-xdist>=3.8.0",
            "pytest>=8.4.0",
        ]
        sqlalchemy = [
            "sqlalchemy>=2.0.0",
        ]
        flask = [
            "flask>=3.0.0",
        ]
        fastapi = [
            "fastapi>=0.115.0",
        ]
        typings = [
            "django-stubs>=5.2.2",
            "types-ldap3>=2.9.13.20250622",
            "types-protobuf>=6.30.2.20250703",
            "types-psutil>=7.0.0",
            "types-psycopg2>=2.9.21.20250718",
            "types-python-dateutil>=2.9.0",
            "types-pyyaml>=6.0.12",
            "types-redis>=4.6.0",
            "types-requests>=2.32.4",
            "types-setuptools>=80.9.0",
            "types-toml>=0.10.8.20240310",
        ]

    [project.scripts]
        flext-observability = "flext_observability.cli:main"

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_observability"

[tool.deptry]
    exclude = [
        ".archive",
        ".git",
        ".meltano",
        ".mypy_cache",
        ".pyrefly_cache",
        ".pytest_cache",
        ".ruff_cache",
        ".venv",
        "__pycache__",
        "build",
        "dist",
        "htmlcov",
        "node_modules",
        "reports",
        "tests",
        "vendor",
        "venv",
    ]
    known_first_party = [
        "flext_observability",
        "flext_core",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "autoflake",
        "bandit",
        "black",
        "codespell",
        "commitizen",
        "deptry",
        "detect-secrets",
        "isort",
        "pip-audit",
        "pre-commit",
        "pylint",
        "pyrefly",
        "pyupgrade",
        "radon",
        "ruff",
        "vulture",
        # Type stubs
        "django-stubs",
        "types-ldap3",
        "types-protobuf",
        "types-psutil",
        "types-psycopg2",
        "types-python-dateutil",
        "types-pyyaml",
        "types-redis",
        "types-requests",
        "types-setuptools",
        "types-toml",
        # Runtime deps used indirectly (via pydantic, opentelemetry)
        "faker",
        "pydantic-core",
        "pytest",
        "pytest-cov",
        "pytest-randomly",
        "rich",
        "typer",
    ]

[tool.ruff]
    extend = "../ruff-shared.toml"


    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_observability",
        ]

    [tool.poetry.group.dev.dependencies]
        pyrefly      = "^0.46.3"
        types-psutil = "^7.0.0.20250801"
    pytest = "^9.0.2"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"
    opentelemetry-exporter-prometheus = ">=0.60b1"
    pytest-randomly = "^4.0.1"
    pytest-cov = "^7.0.0"
    commitizen = "^4.8.3"
