[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "flext-observability"
version = "0.10.0-dev"
description = "FLEXT Observability - Enterprise Monitoring, Metrics & Telemetry"
readme = "README.md"
keywords = [
  "enterprise",
  "flext",
  "logging",
  "metrics",
  "monitoring",
  "tracing",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "opentelemetry-api>=1.39.1,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.39.1,<2",
  "opentelemetry-exporter-prometheus>=0.60b1,<0.61",
  "opentelemetry-sdk>=1.39.1,<2",
  "prometheus-client>=0.23",
  "psutil>=6.1",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "rich>=14.2,<15",
  "structlog>=25.4",
  "typer>=0.15"
]
optional-dependencies.dev = [
  "autoflake>=2.3.1",
  "black>=25.1",
  "codespell>=2.3",
  "deptry>=0.23",
  "isort>=6.0.1",
  "pre-commit>=4.0.1",
  "pylint>=3.3",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "vulture>=2.13",
]
optional-dependencies.fastapi = [
  "fastapi>=0.115",
]
optional-dependencies.flask = [
  "flask>=3",
]
optional-dependencies.security = [
  "bandit>=1.8",
  "pip-audit>=2.7.3",
]
optional-dependencies.sqlalchemy = [
  "sqlalchemy>=2",
]
optional-dependencies.test = [
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "pytest>=8.4",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
]
optional-dependencies.typings = [
  "django-stubs>=5.2.2",
  "types-ldap3>=2.9.13.20250622",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-toml>=0.10.8.20240310",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-observability = "flext_observability.cli:main"

[tool.poetry]
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.types-psutil = "^7.0.0.20250801"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.dev.dependencies.opentelemetry-exporter-prometheus = ">=0.60b1"
group.dev.dependencies.pytest-randomly = "^4.0.1"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.commitizen = "^4.8.3"
packages = [ { from = "src", include = "flext_observability" } ]

[tool.ruff]
extend = "../ruff-shared.toml"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "archive",
  "backup",
  "build",
  "dist",
  "docs",
  "examples",
  "htmlcov",
  "temp-backup",
  "typings",
  "venv",
]
lint.isort.known-first-party = [
  "flext_observability",
]

[tool.deptry]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pyrefly_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "tests",
  "vendor",
  "venv",
]
known_first_party = [
  "flext_observability",
  "flext_core",
]
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "security",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  # Type stubs
  # Runtime deps used indirectly (via pydantic, opentelemetry)
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "deptry",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "ruff",
  "vulture",
  "django-stubs",
  "types-ldap3",
  "types-protobuf",
  "types-psutil",
  "types-psycopg2",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  "pydantic-core",
  "rich",
  "typer"
]

[tool.pytest]
ini_options.addopts = [ "--strict-config", "--strict-markers", "--tb=short", "-p no:sugar", "-q", "-ra" ]

[tool.coverage]
run.source = [ "src/flext_observability" ]
report.fail_under = 100
report.precision = 2

[tool.pyrefly]
search-path = [
  "../typings",
  "../typings/generated",
  "src",
  "tests",
]

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
